--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-tabs": "^3.2.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.2",
     "websocket": "^1.0.34"
   },
