--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,6 @@ steps:
 
 - script: |
     npm install
+    npm run-script start-websocket
     npm run build
   displayName: 'npm install and build'
