--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
 - script: |
     npm install
     npm run build
-    npm test
+    npm test -- --watchAll=false
   displayName: 'npm install and build'
